# env-audit-poc

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
src/env_audit/: cli.py  normalizer.py  orchestrator.py
src/env_audit/analyzers/: __init__.py  base.py  duplicates.py  orphans.py  path_shadow.py
src/env_audit/collectors/: __init__.py  apt.py  base.py  manual.py  npm.py  pip.py
src/env_audit/models/: __init__.py  binary.py  metadata.py  package.py
src/env_audit/renderers/: __init__.py  base.py  json.py  table.py
tests/: test_cli.py  test_normalizer.py  test_orchestrator.py
tests/fixtures/apt/: ubuntu-22.04.txt
tests/fixtures/npm/: global.json
tests/fixtures/pip/: ubuntu-22.04.json
tests/test_analyzers/: test_base.py  test_duplicates.py  test_orphans.py  test_path_shadow.py
tests/test_collectors/: test_apt.py  test_base.py  test_manual.py  test_npm.py  test_pip.py
tests/test_models/: test_binary.py  test_metadata.py  test_package.py
tests/test_renderers/: test_base.py  test_json.py  test_table.py
