[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "env-audit-poc"
version = "0.1.0"
description = "A read-only environment auditing tool for developers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Mihir Gonsalves", email = "mihir.gonsalves@outlook.com" },
]
keywords = ["developer-tools", "environment", "audit", "package-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.1.0",          # CLI framework
    "rich>=13.0.0",          # Terminal formatting and tables
    "pydantic>=2.0.0",       # Data validation (better than plain dataclasses)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",           # Fast linter (replaces flake8, black, isort)
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/mihir-gonsalves/env-audit-poc"
Documentation = "https://github.com/mihir-gonsalves/env-audit-poc#readme"
Repository = "https://github.com/mihir-gonsalves/env-audit-poc"
Issues = "https://github.com/mihir-gonsalves/env-audit-poc/issues"

[project.scripts]
env-audit-poc = "env_audit.cli:main"

# Hatch configuration
[tool.hatch.build.targets.wheel]
packages = ["src/env_audit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=env_audit",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Ruff configuration (replaces black, isort, flake8)
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused function arguments in tests are fine
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"